--- a/Basic_of_AI/Basic_of_Function.ipynb
+++ b/Basic_of_AI/Basic_of_Function.ipynb
@@ -333,8 +333,88 @@
     "### 함수 연습문제\n",
     "\n",
     "1. 주어진 숫자 리스트의 평균을 구하는 함수를 출력하시오\n",
-    "2. 해당 숫자가 소수이닞 아닌지 판별하시오\n",
+    "2. 해당 숫자가 소수인지 아닌지 판별하시오\n",
     "3. 2부터 해당 숫자사이에 소수가 몇개인지 출력하는 함수를 구하시오"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "source": [
+    "# 1번 문제\n",
+    "def avg(a):\n",
+    "    total = 0\n",
+    "    for x in a:\n",
+    "        total += x\n",
+    "    return total / len(a)\n",
+    "\n",
+    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "b = [1, 2, 8, 10]\n",
+    "print(avg(b))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5.25\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "source": [
+    "# 2번 문제\n",
+    "a = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "def isprimenum(a):\n",
+    "        for i in range(2, a): \n",
+    "            if a % i == 0:\n",
+    "                print(\"It's not a prime nubmer\")\n",
+    "                break\n",
+    "            elif a-1 == i:\n",
+    "                print(\"It's a prime nubmer\")\n",
+    "                break\n",
+    "isprimenum(a)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "# 3번 문제\n",
+    "a = int(input(\"Enter a number: \"))\n",
+    "def how_many_prime(a):\n",
+    "    temp_list = list(range(2, a+1))\n",
+    "    count = 0\n",
+    "    print(2, end=' ')\n",
+    "    for x in temp_list:\n",
+    "        for i in range(2, x):\n",
+    "            if x % i == 0:\n",
+    "                break\n",
+    "            elif x-1 == i:\n",
+    "                print(x, end=' ')\n",
+    "                count += 1\n",
+    "                break\n",
+    "    return count + 1\n",
+    "print(f'\\n2부터 {a}사이의 소수 갯수는 {how_many_prime(a)}')\n",
+    "\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97 \n",
+      "2부터 100사이의 소수 갯수는 25\n"
+     ]
+    }
    ],
    "metadata": {}
   },
@@ -343,11 +423,6 @@
    "execution_count": null,
    "source": [],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
    "metadata": {}
   }
  ],
